--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,8 @@
 	},
 	"require": {
 		"php": "^7.4 || ^8.0",
-		"typo3/cms-backend": "^11.5",
-		"typo3/cms-core": "^11.5"
+		"typo3/cms-backend": "^11.5 || ^12.4",
+		"typo3/cms-core": "^11.5 || ^12.4"
 	},
 	"require-dev": {
 		"ergebnis/composer-normalize": "^2.28"
