--- a/Configuration/Services.yaml
+++ b/Configuration/Services.yaml
@@ -1,6 +1,16 @@
 services:
+  _defaults:
+    autowire: true
+    autoconfigure: true
+    public: false
+
   EHAERER\PasteReference\EventListener\ExtTablesInclusionPostProcessing:
     tags:
       - name: event.listener
         identifier: 'paste_reference-after-tca-compilation-event'
         event: TYPO3\CMS\Core\Configuration\Event\AfterTcaCompilationEvent
+
+  EHAERER\PasteReference\EventListener\ModifyPageLayoutContentEventListener:
+    tags:
+      - name: event.listener
+        identifier: 'paste-reference/backend/modify-page-layout-content'
